add users & permissions

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "type": "module",
   "scripts": {
-    "dev": "tsx watch ./src/server.ts",
+    "dev": "tsx watch src/app/server.ts",
     "build": "swc src -d dist",
     "prod": "node dist/server.js",
     "type:check": "tsc --noEmit",
