--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "",
   "type": "module",
   "scripts": {
-    "dev": "tsx watch src/app/server.ts",
+    "dev": "tsx watch --env-file=.env src/app/server.ts",
     "build": "swc src -d dist",
-    "prod": "node dist/server.js",
+    "serve": "node --env-file=.env dist/src/app/server.js",
+    "prod": "npm run build & npm run serve",
     "type:check": "tsc --noEmit",
     "format:check": "prettier 'src/**/*.{ts,json}' --check",
     "format:fix": "prettier 'src/**/*.{ts,json}' --write",
